--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<ul>
 				<li><a href="#sobre">Sobre</a></li>
 				<li><a href="#produtos">Produtos</a></li>
-				<li><a href="#preço">Preço</a></li>
+				<li><a href="#preco">Preço</a></li>
 				<li><a href="#qualidade">Qualidade</a></li>
 			</ul>
 		</nav>
@@ -36,7 +36,118 @@
 	<h1 class="introducao">Novos valores e <br>Propriedades de CSS</h1>
 
 	<section class="sobre" id="sobre">
-		
+		<div class="sobre-info">
+			<h1>Sobre</h1>
+			</p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão das condições inegavelmente apropriadas objetivos.</p>
+			<p> O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão das condições inegavelmente apropriadas objetivos.</p>
+		</div>
+		<div class="sobre-img">
+			<img src="img/sobre2.jpg">
+		</div>
+		<div class="sobre-img">
+			<img src="img/sobre1.jpg">
+		</div>
 	</section>
+
+	<section class="produtos" id="produtos">
+		<h1>Produtos</h1>
+		<div class="produtos-container">
+			<div class="produtos-item purple" >
+				<h2>Purple</h2>
+				<img src="img/produtos1.jpg" alt="produtos 1">
+			</div>
+			<div class="produtos-item pink" >
+				<h2>Pink</h2>
+				<img src="img/produtos2.jpg" alt="produtos 2">
+			</div>
+			<div class="produtos-item blue" >
+				<h2>Blue</h2>
+				<img src="img/produtos3.jpg" alt="produtos 3">
+			</div>
+		</div>
+	</section>
+
+	<section class="preco" id="preco">
+		<div class="preco-item">
+			<h2>Cobre</h2>
+			<span><sup>R$ 19</sup></span>
+			<ul>
+				<li>Planos Ilimitados</li>
+				<li>Acesso Restrito</li>
+				<li>Conteúdo Secreto</li>
+				<li>Suporte 24h</li>
+			</ul>
+			<a href="#">Comprar</a>
+		</div>	
+
+		<div class="preco-item">
+			<h2>Prata</h2>
+			<span><sup>R$ 39</sup></span>
+			<ul>
+				<li>Planos Ilimitados</li>
+				<li>Acesso Restrito</li>
+				<li>Conteúdo Secreto</li>
+				<li>Suporte 24h</li>
+				<li>Compra Exclusiva</li>
+			</ul>
+			<a href="#">Comprar</a>
+		</div>
+
+		<div class="preco-item">
+			<h2>Ouro</h2>
+			<span><sup>R$ 79</sup></span>
+			<ul>
+				<li>Planos Ilimitados</li>
+				<li>Acesso Restrito</li>
+				<li>Conteúdo Secreto</li>
+				<li>Suporte 24h</li>
+				<li>Compra Exclusiva</li>
+				<li>Download dos Itens</li>
+			</ul>
+			<a href="#">Comprar</a>
+		</div>		
+	</section>
+
+	<section class="qualidade" id="qualidade">
+		<div class="qualidade-item">
+			<h2>Inteligente</h2>
+			<p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão</p>
+		</div>
+		<div class="qualidade-item">
+			<h2>Compacto</h2>
+			<p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão das condições inegavelmente</p>
+		</div>
+		<div class="qualidade-item">
+			<h2>Economico</h2>
+			<p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão</p>
+		</div>
+		<div class="qualidade-item">
+			<h2>Transparente</h2>
+			<p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão</p>
+		</div>
+		<div class="qualidade-item">
+			<h2>Opaco</h2>
+			<p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão das condições inegavelmente</p>
+		</div>
+		<div class="qualidade-item">
+			<h2>Sustentável</h2>
+			<p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão</p>
+		</div>
+	</section>
+
+	<section class="newsletter">
+		<div class="newsletter-info">
+			<h1>Newslleter</h1>
+			<p>assine e fique por dentro das novidades</p>
+		</div>
+		<form class="newsletter-form">
+			<input type="text" placeholder="Seu e-mail" name="">
+			<button type="submit">Assinar</button>
+		</form>
+	</section>
+
+	<footer class="footer">
+		<p>FlexBlog © Todos os direitos reservados.</p>
+	</footer>
 </body>
 </html>
