--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<div class="superinfo">
 			<p>Seg / Sex - 08: às 18:00</p>
 			<a href="tel:552199999999"> +55 21 9999-9999</a>
-			<p>Av. Ali Perto, 330, Bota fogo - RJ</p>
+			<p>Rua dos Alfeneiros, Plataforma 9 e Três Quartos - Hogwarts</p>
 		</div>
 	</div>
 	<header class="menu-bg">
